# transport-routing-system

./: .gitignore  README.md
backend/: requirements.txt
backend/app/: database.py  dependencies.py  main.py
backend/app/api/: auth_routes.py  routes.py
backend/app/auth/: security.py
backend/app/models/: db_models.py  dto.py
backend/app/services/: __init__.py  csv_import_service.py  graph_manager.py  graph_quality_service.py  job_manager.py  profile_service.py  routing_service.py  scenario_service.py
core/: Cargo.toml
core/src/: graph.rs  lib.rs
core/src/algorithms/: a_star.rs  dijkstra.rs  mod.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AuthStatusBar.tsx  BatchRouteForm.tsx  HistoryPanel.tsx  LoginForm.tsx  MapView.tsx  RegisterForm.tsx  RouteForm.tsx  StatsPanel.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AuthPage.tsx
