[package]
name = "routing_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "routing_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.10"
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["pyo3/extension-module"]
